--- a/src/NanoFabric.IdentityServer/NanoFabric.IdentityServer.csproj
+++ b/src/NanoFabric.IdentityServer/NanoFabric.IdentityServer.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="1.3.1" />
-    <PackageReference Include="NodaTime" Version="2.0.0-beta20170123" />
-    <PackageReference Include="StackExchange.Redis" Version="1.2.1" />
+    <PackageReference Include="IdentityServer4" Version="1.5.1" />
+    <PackageReference Include="NodaTime" Version="2.0.2" />
+    <PackageReference Include="StackExchange.Redis" Version="1.2.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NanoFabric.Domain\NanoFabric.Domain.csproj" />
